--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@300&family=Lato&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700&family=Roboto+Condensed:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@300&family=Lato&family=Leckerli+One&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700&family=Roboto+Condensed:wght@300&display=swap');
 
-/*############# general ############*/
+/*############# general #######################################################*/
 
 
 * {
@@ -56,11 +56,97 @@ img {
     padding: 1%;
 }
 
-/*########### end general #############*/
+/*########### end general ##########################################################*/
 
 
-/*############# main ##################*/
+/* ########## header #############################################################*/
+header .container{
+    grid-area: header;
+    display: grid;
+    grid-template-rows: repeat(3, auto);
+    grid-template-areas: 'row1' 'row2' 'row3';
+}
 
+header .container > div {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+#topHeaderRow {
+    grid-area: row1;
+    justify-content: space-between;
+    background-color: rgb(34, 34, 34);
+    color:white;
+    padding: 1rem;
+}
+
+#logoRow {
+    grid-area: row2;
+    color: #E7E7E7;    
+
+}
+
+#mainNavigationRow {
+    grid-area: row3;
+    background-color: rgb(248, 248, 248);
+    border: 1px solid lightgray;
+}
+
+header li {
+    display: inline-block;
+    padding:0 1rem;
+}
+
+#topHeaderRow a:any-link {
+    color:white;
+}
+
+#logoRow form {
+    flex: 50%;
+    align-self: center;
+    text-align: center;
+}
+
+#logoRow input, 
+#logoRow button {
+    border: 1px solid lightgray;
+    width: min-content;
+    color: gray;
+    padding: 0.5rem;
+    background-color: white;
+}
+
+#logoRow label {
+    color: white;
+}
+
+#mainNavigationRow li {
+    padding: 1rem;
+    transition-property: background-color;
+    transition-duration: 0.7s;
+    transition-timing-function: ease-in-out;
+    transition-delay: 0s; 
+}
+
+#mainNavigationRow li:hover{
+    background-color: lightgray;
+}
+
+#mainNavigationRow a:any-link{
+    color: rgb(91, 91, 91); 
+}
+
+
+/*############ end header ########################################################*/
+
+
+/*############# main #################################################################*/
+
+main {
+    font-size: 0.85em;
+}
 h2 {
     grid-area: portrait-name;
     font-size: 1.5em;
@@ -106,16 +192,15 @@ main a{
     border: 2px solid lightgray;
 }
 
-/*########### end main ###############*/
+/*########### end main ###########################################################*/
 
 
-/*########## similar products #########*/
+/*########## similar products #######################################################*/
 
 #productsRow{
     display: flex;
     column-gap: 1rem;
     row-gap: 1rem;
-
     flex: min-content;
     flex-wrap: wrap;
 }
@@ -172,16 +257,17 @@ main a{
     background-color: rgb(91, 192, 222);
 }
 
-/*########### end similar products ###########*/
+/*########### end similar products ##############################################*/
 
 
 
-/*############ aside ########################*/
+/*############ aside ############################################################*/
 
 aside > div {
     border:2px solid  rgb(217, 237, 247);
     color: rgb(66, 139, 202);
     border-radius: 4px;
+    font-size: 0.85em;
 }
 
 aside h3 {
@@ -239,10 +325,10 @@ aside li {
     font-weight: bold;
 }
 
-/* ############# end aside ###########*/
+/* ############# end aside ############################################################*/
 
 
-/* ############## footer ############*/
+/* ############## footer #############################################################*/
 
 footer > div {
     padding-bottom: 4em;
@@ -325,4 +411,4 @@ footer li {
 
 /* end footer copyright */
 
-/*############ end footer ############*/
+/*############ end footer ###############################################################*/
