--- a/style.css
+++ b/style.css
@@ -1,16 +1,32 @@
+/* this css file is organized in sections, separated by ### comment lines
+    for better navigation. The sections are:
+    - general styles
+    - header styles
+    - main styles
+    - similar products section styles
+    - aside styles
+    - footer styles
+    - at the very bottom styles about the table/form section in main
+        (varies in content through different html pages of the 2nd project) 
+
+
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@300&family=Lato&family=Leckerli+One&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700&family=Roboto+Condensed:wght@300&display=swap');
 
 /*############# general #######################################################*/
-
+:root {
+    --blue: rgb(66, 139, 202);
+    --white: rgb(255, 255, 255);
+    --bg-gray: lightgray;
+}
 
 * {
     padding: 0px;
     margin: 0px;
-    text-decoration: none;
     border: 0px;
+    text-decoration: none;
+    border-radius: 4px;
     font-weight: normal;
     font-family: 'Lato', sans-serif, Verdana, Geneva, Tahoma, sans-serif;
-    border-radius: 4px;
 }
 
 ul {
@@ -18,7 +34,7 @@ ul {
 }
 
 a:any-link {
-    color: rgb(66, 139, 202);   
+    color: var(--blue);   
 }
 
 a:active,
@@ -44,15 +60,15 @@ h4 {
 }
 
 button {
-    background-color: rgb(66, 139, 202);
-    border: 1px solid lightgray;
-    font-weight: bold;
-    color: white;
     padding: 4%;
+    border: 1px solid var(--bg-gray);
+    background-color: var(--blue) ;
+    font-weight: bold;
+    color: var(--white);
 }
 
 img {
-    border:2px solid lightgray;
+    border:2px solid var(--bg-gray);
     padding: 1%;
 }
 
@@ -77,21 +93,22 @@ header .container > div {
 #topHeaderRow {
     grid-area: row1;
     justify-content: space-between;
-    background-color: rgb(34, 34, 34);
-    color:white;
     padding: 1rem;
+    background-color: rgb(34, 34, 34);
+    color:var(--white);
 }
 
 #logoRow {
+    --white: #E7E7E7;
     grid-area: row2;
-    color: #E7E7E7;    
+    color: var(--white);    
 
 }
 
 #mainNavigationRow {
     grid-area: row3;
+    border: 1px solid var(--bg-gray);
     background-color: rgb(248, 248, 248);
-    border: 1px solid lightgray;
 }
 
 header li {
@@ -100,7 +117,7 @@ header li {
 }
 
 #topHeaderRow a:any-link {
-    color:white;
+    color:var(--white);
 }
 
 #logoRow form {
@@ -111,11 +128,11 @@ header li {
 
 #logoRow input, 
 #logoRow button {
-    border: 1px solid lightgray;
     width: min-content;
-    color: gray;
     padding: 0.5rem;
+    border: 1px solid var(--bg-gray);
     background-color: white;
+    color: gray;
 }
 
 #logoRow label {
@@ -131,7 +148,7 @@ header li {
 }
 
 #mainNavigationRow li:hover{
-    background-color: lightgray;
+    background-color: var(--bg-gray);
 }
 
 #mainNavigationRow a:any-link{
@@ -145,11 +162,13 @@ header li {
 /*############# main #################################################################*/
 
 main {
-    font-size: 0.85em;
+    font-size: 0.85rem;
+    color: rgb(91, 91, 91);
 }
+
 h2 {
     grid-area: portrait-name;
-    font-size: 1.5em;
+    font-size: 1.7rem;
     font-weight: bolder;
 }
 
@@ -157,31 +176,27 @@ picture {
     grid-area: portrait;
 }
 
+main a{
+    color: var(--blue);
+}
+
 #details {
     grid-area: details;
 }
 
-main {
-    color: rgb(91, 91, 91);
-}
-
-main a{
-    color: rgb(66, 139, 202);
-}
-
 .price {
-    color: red;
-    font-weight: 900;
-    font-size: 1.5rem;
     margin: 0.5rem 0;
+    font-weight: 900;
+    font-size: 1.3rem;
+    color: red;
 }
 
 #cart button {
-    background-color: white;
-    color: rgb(66, 139, 202);
-    padding: 0.8rem;
-    font-size: 1rem;
-    margin: 0.5rem 0;
+    margin: 0.6rem 0;
+    padding: 0.7rem;
+    background-color: var(--white);
+    font-size: 0.85rem;
+    color: var(--blue);
 }
 
 #cart a {
@@ -189,7 +204,7 @@ main a{
 }
  
 #insertedBox {
-    border: 2px solid lightgray;
+    border: 2px solid var(--bg-gray);
 }
 
 /*########### end main ###########################################################*/
@@ -199,27 +214,27 @@ main a{
 
 #productsRow{
     display: flex;
-    column-gap: 1rem;
-    row-gap: 1rem;
     flex: min-content;
     flex-wrap: wrap;
+    gap: 1rem;
 }
 
 .main-item2 h3 {
+    padding-bottom: 0.7rem;
     font-size: 1.3rem;
     font-weight: bold;
-    padding-bottom: 0.7rem;
 }
 
 .item {
-    border: 1px solid lightgray;
-    padding: 2% 1%;
-    font-size: 0.85em;
-    max-width: 230px;
     display: flex;
     flex-direction: column;
-    row-gap: 1rem;
     flex: content;
+    row-gap: 1rem;
+    min-width: 200px;
+    max-width: 230px;
+    padding: 2% 1%;
+    border: 1px solid var(--bg-gray);
+    font-size: 0.85rem;
 }
 
 .item > div {
@@ -231,30 +246,31 @@ main a{
 }
 
 .similarTitle a{
-    color: rgb(66, 139, 202);
+    font-size: 0.8rem;
     font-weight: bold;    
+    color: var(--blue);
 }
 
 .main-item2 button {
-    background-color: rgb(92, 184, 92); 
-    margin-top: 1em;
-    margin-right: 1%;
-    padding: 0.3em 0.5em;
-    
+    margin-top: 1rem;
+    margin-right: 0.1rem;
+    padding: 0.3rem;
+    background-color: rgb(92, 184, 92);    
 }
 
 .main-item2 button a{
-    color: white;
     font-weight: bold;
-    font-size: 0.8em;;
+    font-size: 0.7rem;
+    color: var(--white);
 }
 
 .main-item2 button:first-of-type {
-    background-color: rgb(66, 139, 202);
+    background-color: var(--blue);
 }
 
 .main-item2 button:last-of-type {
-    background-color: rgb(91, 192, 222);
+    --blue: rgb(91, 192, 222);
+    background-color: var(--blue);
 }
 
 /*########### end similar products ##############################################*/
@@ -264,65 +280,77 @@ main a{
 /*############ aside ############################################################*/
 
 aside > div {
-    border:2px solid  rgb(217, 237, 247);
-    color: rgb(66, 139, 202);
+    border:2px solid var(--bg-gray);
     border-radius: 4px;
-    font-size: 0.85em;
+    font-size: 0.85rem;
+    color: var(--blue);
 }
 
 aside h3 {
-    padding: 0.5em;
+    --bg-gray: rgb(217, 237, 247);
+    padding: 0.5rem;
+    border-bottom: 2px solid var(--bg-gray);
+    background-color: var(--bg-gray);
+    font-weight: bold;
     color: rgb(105, 154, 177);
-    border-bottom: 2px solid rgb(217, 237, 247);
-    background-color: rgb(217, 237, 247);
 }
 
 aside ul {
-    padding: 1em 1em 0 1em;
+    padding: 1rem 1rem 0 1rem;
 }
 
 aside li {
-    padding-bottom: 1.5em;
+    padding-bottom: 1.5rem;
 }
 
 #cartInfo {
-    border-color: rgb(66, 139, 202);
+    border-color: var(--blue);
 }
 
 #cartInfo h3 {
-    color: white;
-    background-color: rgb(66, 139, 202);
+    background-color: var(--blue);
+    color: var(--white);
 }
 
-#cartInfo div:last-of-type {
-    padding: 0.5em 0.9em;
+.cart-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    padding: 0.9rem;
+    font-size: 0.7rem;
+}
+
+.cart-container div:last-of-type button{
+    font-size: 0.75rem;
 }
 
 .cartItem {
-    padding: 1em 1em;
     display: flex;
-    font-size: 0.8em;
     align-items: center;
+    padding: 0 1rem 1rem 0;
 }
 
 .cartItem p {
     display: inline-block;
-    padding: 0 1em;
+    margin-left: 0.75rem;
     word-wrap: break-word;
-    color: rgb(66, 139, 202);
+    color: var(--blue);
 }
 
 .cartText {
-    color: black;
-    font-size: 0.8em;
+    padding: 0.5rem 0;
+    font-size: 0.8rem;
     font-weight: bold;
-    padding: 0.5em 1em;
+    color: black;
+}
 
+.cartItem a {
+    font-weight: bold;
 }
 
 .totalAmount {
-    color: rgb(173, 153, 118);
     font-weight: bold;
+    color: rgb(173, 153, 118);
 }
 
 /* ############# end aside ############################################################*/
@@ -331,20 +359,20 @@ aside li {
 /* ############## footer #############################################################*/
 
 footer > div {
-    padding-bottom: 4em;
-    font-size: 0.8em;
+    padding-bottom: 3rem;
+    font-size: 0.8rem;
 }
 
 footer h4 {
-    font-family: 'Roboto Condensed', sans-serif;
-    color: rgb(34, 34, 34);
-    font-weight: bold;
     padding: 1% 0;
-    font-size: 1.2em;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 1rem;
+    font-weight: bold;
+    color: rgb(34, 34, 34);
 }
 
 footer li {
-    padding: 1.2em 0 0 0;
+    padding: 1.2rem 0 0 0;
 }
 
 /* footer just ordered section */
@@ -374,7 +402,7 @@ footer li {
     display: flex;
     flex-direction: column;
     margin: 2% 0;
-    border: 2px solid lightgray;
+    border: 2px solid var(--bg-gray);
 }
 
 .input {
@@ -398,11 +426,11 @@ footer li {
 }
 
 .footer-item5 p {
-    color: rgb(231, 231, 231);
-    font-size: 0.9em;
     --side: calc((100% - 1300px) / 2);
     margin: 0 var(--side) 0 var(--side);
-    padding: .5em 0;
+    padding: .5rem 0;
+    font-size: 0.85rem;
+    color: rgb(231, 231, 231);
 }
 
 .footer-item5 span {
@@ -412,3 +440,119 @@ footer li {
 /* end footer copyright */
 
 /*############ end footer ###############################################################*/
+
+
+
+/* ############ container with variant content (table/row) #############################*/
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    font-size: 0.85rem;
+}
+
+table caption {
+    padding: 0.5rem;
+    background-color: rgb(248, 248, 248);
+    text-align: start;
+}
+
+table td {
+    border-top: 1px solid lightgray;
+    padding: 0.5rem;
+}
+
+table th{
+    padding: 0.5rem;
+    border-top: 1px solid lightgray;
+    text-align: start;
+    font-weight: bold;
+}
+
+
+/* form */
+
+picture p {
+    margin-bottom: 1em;
+}
+
+#insertedBox form{
+    padding: 3% 7% 3% 2%;    
+    border-color: rgb(223, 223, 223);
+    background-color: rgb(243, 246, 252);
+}
+
+form fieldset {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem 2rem;
+    justify-content: start;
+    margin-top: 1.5rem;
+}
+
+form fieldset div {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    row-gap: 0.5em;
+}
+
+form legend{
+    width: 100%;
+    margin-bottom: 1.2rem;
+    border-bottom: 1px solid rgb(223, 223, 223);
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: rgb(91, 91, 91);
+}
+
+form label {
+    font-size: 0.9em;
+    font-weight: bolder;
+}
+
+form input { 
+    max-width: 80%;
+    padding: 0.55rem;
+    border: 1px solid rgb(223, 223, 223);
+    border-radius: 4px;
+    font-size: 0.75rem;
+}
+
+form input[type="date"]{
+    max-width: 70%;
+    padding: 0.8rem;
+}
+
+form select {
+    max-width: 70%;
+    padding: 0.5em;
+    border: 1px solid rgb(223, 223, 223);
+    border-radius: 4px;
+    background-color: rgb(223, 223, 223);
+    font-size: 0.75rem;
+}
+
+form button {
+    width: 40%;
+    padding: 0.5rem;
+    font-weight: normal;
+}
+
+#account > div {
+    grid-column: 1;
+}
+
+#termsField {
+    margin: 1rem 0 0.9rem 0;
+}
+
+#termsField input {
+    margin-right: 1%;
+    border: 2px solid rgb(223, 223, 223);
+}
+
+
+
+
