--- a/mobile.css
+++ b/mobile.css
@@ -11,6 +11,7 @@
         display:unset;
         text-align: center;
         color: black;
+        z-index: -1;
     }
 
     .footer-item4 form {
@@ -21,5 +22,18 @@
         display: block;
         width: 50vw;
     }
+
+    /*
+    .footer-item4 form::before {
+        position: absolute;
+        content: "▲";
+        width: 5%;
+        height: 2%;
+        background-color: rgb(231, 231, 231);
+        top: 45%;
+        left:26%;
+        color: rgb(91, 91, 91);
+    }
+    */
 
 }
