--- a/mobile.css
+++ b/mobile.css
@@ -32,6 +32,7 @@
         background-color: rgb(231, 231, 231);
         top: 45%;
         left:26%;
+        z-index: 2;
         color: rgb(91, 91, 91);
     }
     
