--- a/mobile.css
+++ b/mobile.css
@@ -7,34 +7,40 @@
         display: none;
     }
 
-    .footer-item4 h4 a {    /*for dropdown*/
-        display:unset;
+    .responsive-effects {    /*for dropdown*/
+        display: unset;
         text-align: center;
-        color: black;
-        z-index: -1;
     }
 
-    .footer-item4 #contact-form {
+    .footer-item4 form {
         display: none;
     }
 
-    .footer-item4 #contact-form:target {
+    .footer-item4 form:target {
         display: block;
         width: 50vw;
     }
-
     
-    .footer-item4 form::before {
-        position: absolute;
-        content: "▲";
-        width: 5%;
-        height: 2%;
-        background-color: rgb(231, 231, 231);
-        top: 45%;
-        left:26%;
-        z-index: 2;
+    .footer-item4 a[href$=appear] {
         color: rgb(91, 91, 91);
     }
-    
+    .footer-item4 a[href$=disappear] {
+        position: absolute;
+        width: 0.5em;
+        height: 0.5em;
+        background-color: rgb(231, 231, 231);
+        top: 45%;
+        left: 25%;
+        color: rgb(91, 91, 91);
+        font-size: 2em;
+        vertical-align: baseline;
+    }
+    .footer-item4 form a:first-of-type i{
+        position: absolute;
+        right:3px;
+        top: 3px;
+    }
+
+
 
 }
