--- a/style.css
+++ b/style.css
@@ -414,7 +414,7 @@ footer li {
     width: 100%;
 }
 
-.footer-item4 h4 a {   /*for dropdown*/
+.responsive-effects {   /*for dropdown*/
     display:none;
 }
 
