--- a/style.css
+++ b/style.css
@@ -424,15 +424,7 @@ footer li {
 /* footer copyright */
 
 @media (max-width: 700px){
-    .footer-item4 {
-        margin-bottom: 2rem;
-    }
-
     .footer-item5{
-        position: absolute;
-        bottom:0;
-        left: 0;
-        width: fit-content;
         padding: 0.5rem;
         border-radius: 0;
         background-color: #3A3A3A;
@@ -447,6 +439,11 @@ footer li {
 }
 
 @media (min-width: 701px){
+
+    .item3 {
+        position: relative;
+    }
+
     .footer-item5 {
         position: absolute;
         bottom:0;
