--- a/style.css
+++ b/style.css
@@ -399,10 +399,14 @@ footer li {
     font-size: 0;
 }
 
+.footer-item4 form {
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5rem;
+}
 .field {
     display: flex;
     flex-direction: column;
-    margin: 2% 0;
     border: 2px solid var(--bg-gray);
 }
 
@@ -424,6 +428,7 @@ footer li {
 /* footer copyright */
 
 @media (max-width: 700px){
+
     .footer-item5{
         padding: 0.5rem;
         border-radius: 0;
