--- a/mobile.css
+++ b/mobile.css
@@ -2,17 +2,20 @@
     * {
         font-size: min(4vw, 1em);
     }
-   
-    .footer-item1,  /* υπάρχει σύνδεσμος στο κύριο μενού */
-    .footer-item3 {    /* υπάρχει η πληροφορία στο καλάθι */
-        display: none;
-    }
 
     .responsive-effects {    /* design in footer for dropdown icons in general additional elements for mobile*/
         display: unset;
         text-align: center;
     }
 
+
+    /*#################### footer #######################################*/
+    
+    .footer-item1,  /* υπάρχει σύνδεσμος στο κύριο μενού */
+    .footer-item3 {    /* υπάρχει η πληροφορία στο καλάθι */
+        display: none;
+    }
+    
     .footer-item4 form {
         width: 17rem;
         row-gap: 1rem;
@@ -28,20 +31,17 @@
         display: none;
     }
 
-    .footer-item4  h4 {
-        margin-bottom: 1rem;
-    }
     .footer-item4 fieldset:target {
-        border-radius: 0;
-        display: flex;
-        width: 100vw;
-        height: 100vh;
-        align-items: center;
-        justify-content: center;
         position: fixed;
-        background-color: rgba(91, 91, 91, 0.89);
         top: 0vh;
         left: 0vw;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 0;
+        background-color: rgba(91, 91, 91, 0.89);   
     }
 
     .close {
@@ -50,19 +50,19 @@
     }
 
     .close::after {
-        right: -1rem;
-        top: -3rem; /* inside the form, so it needs negative value to move at the top of the screen */
+        position: absolute;
+        right: -0.5rem;
+        top: -3.5rem;/* inside the form, so it needs negative value to move at the top of the screen */
         width: 2.5rem;
         height: 2.5rem;
-        position: absolute;
         display: flex;
         align-items: center;
         justify-content: center;
         border-radius: 50%;
-        color: rgba(91, 91, 91);
         background-color: rgba(255, 255, 255, 0.712);
         content: "×";
         font-size: 1.5rem;
+        color: rgba(91, 91, 91);
     } 
 
     .footer-item4 legend {
