--- a/style.css
+++ b/style.css
@@ -428,7 +428,9 @@ footer li {
 /* footer copyright */
 
 @media (max-width: 700px){
-
+    .item3 {
+        text-align: center;
+    }
     .footer-item5{
         padding: 0.5rem;
         border-radius: 0;
