same as previous push

--- a/mobile.css
+++ b/mobile.css
@@ -24,10 +24,11 @@
     }
 
     .item:nth-child(even){
+        margin: 0 0 2rem 2rem;
         transition: margin 1s ease-out;
     }
-    .item:nth-child(even):hover{
-        margin: 1rem;
+    .item:nth-child(even):focus, .item:nth-child(even):hover{
+        margin: 0px;
         transition: margin 1s ease-out;
     }
 
