--- a/mobile.css
+++ b/mobile.css
@@ -24,12 +24,14 @@
     }
 
     .item{
+        justify-self: center;
         margin: 0 0 2rem 2rem;
-        transition: margin 1s ease-out;
+        transition: box-shadow 0.5s ease-out;
     }
-    .item:active, .item:hover, .item:focus{
-        margin: 0px;
-        transition: margin 1s ease-out;
+    .item:focus, .item:hover{
+        box-shadow: 0px 2px 2px 2px rgba(45, 71, 100, 0.2), 2px 2px 1px 0 rgba(129, 178, 241, 0.19);   
+
+        transition: box-shadow 0.5s ease-out;
     }
 
     /*#################### footer #######################################*/
