--- a/mobile.css
+++ b/mobile.css
@@ -21,13 +21,12 @@
         border:0;
         margin: 0 0 2rem 2rem;
         box-shadow: 0px 1px 2px 1px rgba(45, 71, 100, 0.2), 1px 2px 2px 0 rgba(129, 178, 241, 0.19);   
-
+        transition: box-shadow 0.4s ease-out;
     }
 
-    .item{
-        transition: box-shadow 0.5s ease-out;
+    .item > div {
+        padding: 0 0 3px 5px;
     }
-
     .item:focus, .item:hover{
         box-shadow: 0px 2px 2px 2px rgba(45, 71, 100, 0.2), 3px 2px 1px 0 rgba(129, 178, 241, 0.19);   
         transition: box-shadow 0.5s ease-out;
