--- a/mobile.css
+++ b/mobile.css
@@ -35,7 +35,7 @@
         padding: 0 0 3px 5px;
     }
 
-    .item:focus, .item:hover{
+    .item:focus, .item:hover, .item:active{
         box-shadow: 0px 2px 2px 2px rgba(45, 71, 100, 0.2), 3px 2px 1px 0 rgba(129, 178, 241, 0.19);   
         transition: box-shadow 0.5s ease-out;
     }
@@ -96,10 +96,9 @@
 
     .footer-item4 legend {
         position: absolute;
-        bottom: calc(50vh + 11rem);
+        bottom: calc(50vh + 12rem);
         width: 17rem;
-        padding-top: .5rem;
-        border-bottom: 2px solid var(--bg-gray);        
+        padding-top: .5rem;       
         color: white;
         font-size: 1.5rem;
         text-align: start;
