--- a/mobile.css
+++ b/mobile.css
@@ -18,11 +18,29 @@
 
     /*################ end removed elements ########################*/
     
-    table tbody#table-appear {
+
+    /*########################## main ##############################*/
+
+    #details {
+        display: grid;
+        grid-template-rows: repeat(4, auto);
+        max-width: 90vw;
+        row-gap: 1%;
+    }   
+
+    #portraitDesc {
+        grid-row: 3;
+    }
+
+    #insertedBox {
+         grid-row: 4;
+    }
+
+    table tbody#table-expand {
         display: none;
     }
     
-    table tbody#table-appear:target {
+    table tbody#table-expand:target {
         display: unset;
 
     }
@@ -41,7 +59,7 @@
         font-size: 1.3em;
     }
 
-    #insertedBox table a[href$=appear] {
+    #insertedBox table a[href$=expand] {
         padding-left: 1vw ;
         color: rgb(91, 91, 91);
         float: right;
@@ -51,27 +69,36 @@
         position: relative;
     }
 
-    #insertedBox tr:first-of-type a.close {
+    #insertedBox tr:first-of-type a.shrink {
         position: absolute;
         width: 2rem;
         height: 1rem;
         top: -1.5rem;
-        right: -10rem;
+        right: calc(-10rem + 6vw);
         background-color: white;
         font-size: 1rem;
         color: rgb(91, 91, 91);
         vertical-align: bottom;
     }
-*/
 
-    /*########## similar products #######################################################*/
+    #table-expand::before {     /* to avoid moving the screen at the begining of the table when opened */
+        content: '';
+        display: block;
+        height: 50vh; /* increase the size of the box at where the anchor should focus after visited*/
+        margin-top: -50vh; /* move the contents as where they were */
+        visibility: hidden;
+    }
+
+    /*######################### end main #####################################*/
+
+
+    /*########## similar products as a vertical scroll bar ###################*/
 
     #productsRow {
         max-width: 90vw;
         display: flex;
         flex-wrap: nowrap;
         overflow-x: scroll;
-        scroll-behavior: smooth;
         padding: 0.1rem 0.1rem;
     }
 
@@ -85,10 +112,10 @@
         padding: 0 0 3px 5px;
     }
 
-    /*########## end similar products #######################################################*/
+    /*########## end similar products #############################################*/
 
 
-    /*#################### footer #######################################*/
+    /*#################### footer ################################################*/
     
     .footer-item4 form {
         width: 17rem;
@@ -99,6 +126,7 @@
     .footer-item4 button {
         padding: 1rem;
         font-size: min(4.5vw, 2rem);
+        border-radius: 0;
     }
 
     .footer-item4 fieldset {
@@ -115,7 +143,7 @@
         align-items: center;
         justify-content: center;
         border-radius: 0;
-        background-color: rgba(91, 91, 91, 0.89);   
+        background-color: rgba(91, 91, 91, 0.959);   
     }
 
     .footer-item4 .close {
@@ -147,6 +175,7 @@
         color: white;
         font-size: 1.5rem;
         text-align: start;
+        text-shadow: 1px 2px 1pc black;
     }
 
     .footer-item4 a[href$=appear] {
