cart styling complete
in the header an anchor was added to the cart icon, when clicked it points to the cart section in the aside and with a transition effect it fills the screen

--- a/style.css
+++ b/style.css
@@ -72,6 +72,9 @@ img {
     padding: 1%;
 }
 
+.responsive-active-only {
+    pointer-events: none;
+}
 /*########### end general ##########################################################*/
 
 
