--- a/mobile.css
+++ b/mobile.css
@@ -8,14 +8,22 @@
         text-align: center;
     }
 
+    .responsive-active-only {
+        pointer-events: unset;
+    }
     /*################ removed elements ##############################*/
 
     .footer-item1,   /* already in main navigation*/
     .footer-item3,   /* there is a link for the cart so it takes unnecessary space */
-    #cartInfo {     /* same as previous one */
+    #topHeaderRow li:nth-child(n+3){ /* unnecessary, when clicking on cart there is a transition activating the cart section in the aside */
         display: none;
     } 
-
+    
+    #topHeaderRow li a[href='#'] { /* to hide the text in the link - later if there are urls the seclector needs to change ex. href$=... - so that there won't be a problem with inpage links */
+        color:transparent;
+        font-size: 0;
+        line-height: 0;
+    }
     /*################ end removed elements ########################*/
     
 
@@ -115,6 +123,75 @@
     /*########## end similar products #############################################*/
 
 
+
+    /*########## end similar products #############################################*/
+
+    #cartInfo {
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
+        right: -100vw;
+        top:0;
+        border: 0;
+        font-size: 1.5em;
+        display: grid;
+        align-items: stretch;
+        justify-items: stretch;
+        grid-template-rows: 10vw auto;
+        grid-template-areas: 'cart-item1'
+                             'cart-item2';
+    }
+    
+    #cartInfo:target {
+        right: 0vw;
+        transition: right 0.5s ease-out;
+    }
+
+    .cartItem,
+    .cartText {
+        font-size: 1.2rem;
+    }
+    
+    #cartInfo button{
+        font-size: 1rem;
+    }
+
+    #cartInfo h3 {
+        grid-area: cart-item1;
+        border-radius: 0;
+        color: var(--blue);
+        background-color: rgba(255, 255, 255, 0.979);
+        font-size: 1.3rem;
+        font-weight: bold;
+    }
+    .cartItem {
+        padding: 0.5rem;
+    }
+    .cart-container {
+        row-gap: 1rem;
+    }
+
+    #cartInfo .close::after {
+        top: -2rem;
+        right: 0;
+        font-size: 1.3rem;
+        width: 2rem;
+        height: 2rem;
+        background-color: inherit;
+        color: var(--blue);
+    }
+
+    #cartInfo>div{
+        grid-area: cart-item2;
+        border-radius: 0;
+        background-color: rgba(255, 255, 255, 0.973);
+
+    }
+
+    /*########## end similar products #############################################*/
+
+
+
     /*#################### footer ################################################*/
     
     .footer-item4 form {
@@ -146,12 +223,12 @@
         background-color: rgba(91, 91, 91, 0.959);   
     }
 
-    .footer-item4 .close {
+    .close {
         position: relative;
         display: block;
     }
 
-    .footer-item4 .close::after {
+    .close::after {
         position: absolute;
         right: -1rem;
         top: -4rem;/* inside the form, so it needs negative value to move at the top of the screen */
