--- a/mobile.css
+++ b/mobile.css
@@ -15,10 +15,12 @@
 
     .footer-item1,   /* already in main navigation*/
     .footer-item3,   /* there is a link for the cart so it takes unnecessary space */
-    #topHeaderRow li:nth-child(n+3){ /* unnecessary, when clicking on cart there is a transition activating the cart section in the aside */
+    #topHeaderRow li:nth-child(n+3), /* unnecessary, when clicking on cart there is a transition activating the cart section in the aside */
+    .popularCategory /* take too much space */
+    {
         display: none;
     } 
-    
+
     #topHeaderRow li a[href='#'] { /* to hide the text in the link - later if there are urls the seclector needs to change ex. href$=... - so that there won't be a problem with inpage links */
         color:transparent;
         font-size: 0;
