--- a/mobile.css
+++ b/mobile.css
@@ -33,10 +33,10 @@
     h1 {
         padding-left: 1rem;
     }
-
+/* probably removed 
     header .container {
         row-gap: 1rem;
-    }
+    }*/
     #topHeaderRow > p {
         font-size: min(3vw, 1em);
     }
@@ -71,6 +71,7 @@
         border: 0px;
         padding: 0.8rem;
         border-right: 1px solid var(--bg-gray);
+        border-radius: 0;
     }
 
     #logoRow form label {
@@ -79,38 +80,45 @@
 
     #mainNavigationRow {
         grid-area: row2;
-        display: grid;
-        grid-template-areas: "nav-container-item1 nav-container-item2"
-                            "nav-container-item1 .";
+        padding: 0.5rem;
     }
 
     #mainNavigationRow > a {
-        grid-area: nav-container-item2;
-    }
-    #mainNavigationRow nav {
         grid-area: nav-container-item1;
-        position: absolute;
+    }
+
+    #mainNavigationRow > a i {
+        font-size: 1.7rem;
+        color: rgb(34, 34, 34);
+    }
+
+    
+    #mainNavigationRow nav {
+        grid-area: nav-container-item2;
+        position: fixed;
         width: 100vw;
         height: 100vh;
-        right: -100vw;
+        left: -100vw;
         top:0;
-        background-color: black;
+        background-color: rgba(34, 34, 34, 0.877);
         border: 0;
+        border-radius: 0;
         display: grid;
-        grid-template-columns: calc(100vw - 4rem) 3rem;
-        grid-template-rows: 1.5rem min(10vw,10vh) auto;
+        grid-template-columns: calc(100vw - 4rem) 4rem;
         grid-template-areas:
-                            ". nav-item1"
-                            ". nav-item1"
                             "nav-item2 nav-item1"
+                            "nav-item2 ."
                             ;
     }
 
     #mainNavigationRow nav > a {
         grid-area: nav-item1;
-        background-color: black;
     }
 
+    #mainNavigationRow nav:target{
+        left: 0vw;
+        transition: left 0.5s ease-out;
+    }
     #mainNavigationRow nav > a i {
         font-size: 2rem;
         margin: 1rem ;
@@ -118,21 +126,23 @@
 
     #mainNavigationRow nav ul {
         grid-area: nav-item2;
-        background-color: gray;
         display: flex;
         flex-direction: column;
+        border-radius: 0;
+        background-color: rgb(248, 248, 248);
+
     }
 
     #mainNavigationRow nav ul::before {
-        position: absolute;
-        top:0;
-        height: 16vw;
-        width: 85vw;
-        vertical-align: middle;
-        left: 0;
-        color: white;
-        background-color: green;
+        padding: 3rem 0 0 1rem;
+        height: 14vw;
         content: "Art Store";
+        font-family: 'Leckerli One', cursive;
+        font-weight: bold;
+        font-size: 2rem;
+        color: white;
+        background-color: rgba(34, 34, 34, 0.938);
+
     }
     /*################## header ###################################*/
 
