--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     - aside styles
     - footer styles
     - at the very bottom styles about the table/form section in main
-        (varies in content through different html pages of the 2nd project) 
+        (varies in content through the different html files of the 2nd project) 
 
 */
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@300&family=Lato&family=Leckerli+One&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700&family=Roboto+Condensed:wght@300&display=swap');
@@ -15,7 +15,7 @@
 /*############# general #######################################################*/
 :root {
     --blue: rgb(66, 139, 202);
-    --white: rgb(255, 255, 255);
+    --white: rgb(252, 252, 252);
     --bg-gray: lightgray;
 }
 
