--- a/mobile.css
+++ b/mobile.css
@@ -16,6 +16,7 @@
     .footer-item1,   /* already in main navigation*/
     .footer-item3,   /* there is a link for the cart so it takes unnecessary space */
     #topHeaderRow li:nth-child(n+3) /* unnecessary, when clicking on cart there is a transition activating the cart section in the aside */
+    , .popularCategory
     {
         display: none;
     } 
@@ -153,29 +154,20 @@
 
     #details {
         display: grid;
-        grid-template-rows: repeat(4, auto);
         max-width: 90vw;
-        row-gap: 1%;
+        grid-row-gap: 1rem;
     }   
 
     picture {
         text-align: center;
     }
+
     #portraitDesc {
         grid-row: 3;
     }
 
     #insertedBox {
          grid-row: 4;
-    }
-
-    table tbody#table-expand {
-        display: none;
-    }
-    
-    table tbody#table-expand:target {
-        display: unset;
-
     }
 
     #insertedBox table th,
