--- a/mobile.css
+++ b/mobile.css
@@ -143,7 +143,7 @@
         font-family: 'Leckerli One', cursive;
         font-weight: bold;
         font-size: 2rem;
-        color: white;
+        color: var(--white);
         background-color: rgba(34, 34, 34, 0.938);
 
     }
@@ -195,23 +195,29 @@
         display: flex;
         flex-wrap: nowrap;
         overflow-x: scroll;
-        padding: 0.1rem 0.1rem;
-        background-color: rgb(216, 211, 201);
+        padding-top: 1rem;
+        background-color: rgb(240, 240, 240);
     }
 
     .item {
         margin: 0 0 1.5rem 2rem;
+        border: 0;
+        justify-content: middle;
     }
+    
     .item img {
-        border: 5px solid rgba(59, 57, 44, 0.884);
+        border: 5px solid rgba(68, 68, 70, 0.884);
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 
     .item > div {
-        padding: 0 0 3px 5px;
         text-align: center;
     }
 
-    .item p a {
+    .item button {
+        background-color: rgb(79, 171, 169);
+    }
+    .similarTitle a {
         color: rgb(91, 91, 91);
         font-size: 1rem;
     } 
