--- a/mobile.css
+++ b/mobile.css
@@ -218,12 +218,9 @@
     }
     .similarTitle a {
         color: rgb(91, 91, 91);
-        font-size: 1.2rem;
+        font-size: 1rem;
     } 
 
-    .item button a {
-        font-size: 1rem;
-    }
     /*########## end similar products #############################################*/
     
     .main-item3 {
@@ -238,7 +235,7 @@
         color: rgb(91, 91, 91);
         background-color: var(--white);
         border: 0;
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
 
     .popularCategory:nth-child(2) ul{
@@ -247,15 +244,24 @@
         flex-wrap: nowrap;
         overflow-x: scroll;
         max-width: 93vw;
-        column-gap: 1rem;
+        column-gap: 1.5rem;
         text-align: center;
     }
 
+    .popularCategory:nth-child(2) li {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 1rem;
+    }
+
     .popularCategory:nth-child(2) li a {
-        font-size: 1.2rem;
+        font-size: 1rem;
         color: rgb(91, 91, 91);
-        text-shadow: 1px 2px rgba(0, 0, 0, 0.2);
+        box-shadow: 0 1px 2px 1px rgba(88, 88, 88, 0.2), 0 3px 7px 0 rgba(78, 78, 78, 0.19);
         font-weight: bold;
+        padding: 0.5rem;
+        max-width: 70%;
     }
 
     .popularCategory:last-child * {
@@ -263,9 +269,6 @@
         column-gap: 0.8rem;
     }
 
-    .popularCategory ul {
-        font-size: 1.2rem;
-    }
     /*### cart aside ####*/
 
     #cartInfo {
