--- a/mobile.css
+++ b/mobile.css
@@ -35,10 +35,7 @@
     h1 {
         padding-left: 1rem;
     }
-/* probably removed 
-    header .container {
-        row-gap: 1rem;
-    }*/
+
     #topHeaderRow > p {
         font-size: min(3vw, 1em);
     }
@@ -192,6 +189,34 @@
     picture > p {
         text-align: start;
     }
+    
+    #insertedBox form {
+        max-width: 95vw;
+    }
+
+    #insertedBox fieldset {
+        grid-template-columns: auto;
+        gap: 1rem 0;
+    }
+
+    #insertedBox label,
+    #insertedBox form input {
+        font-size: 1rem;
+    }
+
+    #insertedBox button {
+        font-size: 1rem;
+        width: 70%;
+        padding: 0.7rem;
+    }
+    .fieldItem {
+        width: 80vw;
+    }
+
+    #insertedBox legend {
+        font-size: 1.4rem;
+    }
+
     /*######################### end main #####################################*/
 
 
